--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "babel src -d dist",
     "lint": "eslint src",
-    "start": "NODE_ENV=development nodemon --exec babel-node src/index.js --watch src --watch node_modules --watch config.json",
+    "start": "NODE_ENV=development nodemon --exec babel-node src/index.js --watch src --watch node_modules --watch config.js",
     "test": "mocha --timeout 180000 test/integration.js",
     "docker-build": "docker build -t lattice-connector-endpoint:1.0 .",
     "docker-run": "docker run -d --name lattice-connector-endpoint -p 80:80 -p 1883:1883 lattice-connector-endpoint:1.0"
@@ -35,8 +35,8 @@
     "cconfig": "^2.0.2",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "llog": "^0.2.0",
-    "mqtt": "^2.18.8"
+    "mqtt": "^2.18.8",
+    "pino": "^6.7.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
