--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "lattice-connector-endpoint",
-  "version": "0.0.0",
+  "name": "lattice-connect",
+  "version": "0.1.1",
   "description": "A small HTTP server + MQTT broker designed to bridge the web with Lattices in the field",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "babel src -d dist",
     "lint": "eslint src",
-    "start": "NODE_ENV=development nodemon --exec babel-node src/index.js --watch src --watch node_modules --watch config.js",
+    "start": "npx pm2 start dist/index.js --name lattice-connect --watch",
+    "stop": "npx pm2 stop lattice-connect",
+    "rm": "npx pm2 delete lattice-connect",
     "test": "mocha --timeout 180000 test/integration.js",
-    "docker-build": "docker build -t lattice-connector-endpoint:1.0 .",
-    "docker-run": "docker run -d --name lattice-connector-endpoint -p 80:80 -p 1883:1883 lattice-connector-endpoint:1.0"
+    "docker-build": "docker build -t lattice-connect:1.0 .",
+    "docker-run": "docker run -d --name lattice-connect -p 80:80 -p 1883:1883 lattice-connect:1.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/GridPlus/lattice-connector-endpoint.git"
+    "url": "git+https://github.com/GridPlus/lattice-connect.git"
   },
   "keywords": [
     "Ethereum",
@@ -25,9 +27,9 @@
   "author": "Alex Miller",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/GridPlus/lattice-connector-endpoint/issues"
+    "url": "https://github.com/GridPlus/lattice-connect/issues"
   },
-  "homepage": "https://github.com/GridPlus/lattice-connector-endpoint#readme",
+  "homepage": "https://github.com/GridPlus/lattice-connect#readme",
   "dependencies": {
     "aedes": "^0.42.6",
     "babel-preset-env": "^1.7.0",
@@ -48,7 +50,7 @@
     "eslint-plugin-import": "^2.22.1",
     "gridplus-sdk": "^0.6.1",
     "mocha": "^8.1.3",
-    "nodemon": "^2.0.4",
+    "pm2": "^4.5.2",
     "readline-sync": "^1.4.10"
   }
 }
