--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "babel src -d dist",
     "lint": "eslint src",
-    "start": "npx pm2 start dist/index.js --name lattice-connect --watch",
+    "start": "node dist/index.js",
     "stop": "npx pm2 stop lattice-connect",
     "rm": "npx pm2 delete lattice-connect",
     "test": "mocha --timeout 180000 test/integration.js",
