--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "npx pm2 start dist/index.js --name lattice-connect --watch",
     "stop": "npx pm2 stop lattice-connect",
     "rm": "npx pm2 delete lattice-connect",
+    "logs": "npx pm2 logs lattice-connect",
     "test": "mocha --timeout 180000 test/integration.js",
     "docker-build": "docker build -t lattice-connect:1.0 .",
     "docker-run": "docker run -d --name lattice-connect -p 80:80 -p 1883:1883 lattice-connect:1.0"
